add annotation to gateway

--- a/gitops/apps/guestbook/guestbook-ui-gateway.yaml
+++ b/gitops/apps/guestbook/guestbook-ui-gateway.yaml
@@ -2,6 +2,8 @@ apiVersion: gateway.networking.k8s.io/v1beta1
 kind: Gateway
 metadata:
   name: guestbook-ui
+  annotations:
+    application-networking.k8s.aws/lattice-vpc-association: "true"
 spec:
   gatewayClassName: amazon-vpc-lattice
   listeners:
